chore:👷 update deployment scripts

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 MAKERSUITE_API_KEY = ""
 SAGEMAKER_INFERENCE_ENDPOINT_URL = ""
 ALPHAVANTAGE_API_KEY = ""
+SAGEMAKER_ENDPOINT_NAME = ""
+SAGEMAKER_ROLE_NAME = ""
