--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ guide.txt
 *.ipynb
 venv
 __pycache__
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
